Update and rename hair-loss-supplements-prescriptions-products-brooklyn.html to hair-loss-supplements-prescriptions-products-long-island.html

--- a/hair-loss-supplements-prescriptions-products-long-island.html
+++ b/hair-loss-supplements-prescriptions-products-long-island.html
@@ -48,10 +48,10 @@ src="https://www.facebook.com/tr?id=883315832122742&ev=PageView&noscript=1"
 <!-- End Facebook Pixel Code -->
 
 <link rel="icon" href="images2020/favicon.ico" type="image/x-icon" />
-<link rel="canonical" href="https://www.thestudiomd.com/hair-loss-supplements-prescriptions-products-brooklyn.html" />
-<title>Hair Loss Supplements & Prescriptions |StudioMD Brooklyn</title>
-<meta name="Description" content="Best Hair Regrowth Center, with Supplements, Prescriptions, PRP injections, FUE Hair Transplant, LED Therapy in Brooklyn. Book a free consultation at StudioMD."/>
-<meta name="Keywords" content="Hair Loss, Supplement, Prescriptions, Products Hair Therapy, Growth, Regrowth, Cost, Before and After, Brooklyn"/>
+<link rel="canonical" href="https://www.thestudiomd.com/hair-loss-supplements-prescriptions-products-long-island.html" />
+<title>Hair Loss Supplements & Prescriptions |StudioMD Long Island</title>
+<meta name="Description" content="Best Hair Regrowth Center, with Supplements, Prescriptions, PRP injections, FUE Hair Transplant, LED Therapy in Long Island. Book a free consultation at StudioMD."/>
+<meta name="Keywords" content="Hair Loss, Supplement, Prescriptions, Products Hair Therapy, Growth, Regrowth, Cost, Before and After, Long Island"/>
 <link href="p7lbm/p7LBM-Core.css" rel="stylesheet" type="text/css" media="all" />
 <link href="p7lbm/p7LBM-Custom-01.css" rel="stylesheet" type="text/css" media="all" />
 <link href="studiostyles2020tx.css" rel="stylesheet" type="text/css" media="all" />
@@ -261,7 +261,7 @@ ACCORDION - Style the element that is used to open and close the accordion class
 <div class="aligner1" align="left" itemprop="description">Invigorate blood circulation and stimulation in the scalp, encouraging follicles to grow hair. Optimal results when combined with other methods of regrowth such as plasma injectsions and transplant. </div><br />
 <div class="line"></div><br />
 <div class="aligner4"> <strong>TECHNOLOGY</strong></div>
-<div class="aligner2" itemprop="howPerformed"> Prescription drugs and supplements</div><br />
+<div class="aligner2" itemprop="howPerformed"> Prescription drugs and supplements. Compare risks and benefits of the most common and effective medications used for Alopecia.</div><br />
 <div class="line"></div><br />
 <div class="aligner4"> <strong>DOWNTIME</strong></div>
 <div class="aligner3" itemprop="followup">None</div><br />
@@ -391,26 +391,23 @@ els[i].classList[fnName](className);
 <h3 itemprop="name">Frequently Asked Questions</h3>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">THINNING HAIR: CAN MEDICATIONS HELP?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Although there is no magic cure for Alopecia, the right treatment can prevent further hair loss. The most established treatments available are Finasteride, known also as the brand Propecia, and Minoxidil, known also as the brand Regaine. Both Finasteride and Minoxidil are very effective at stopping hair loss, with up to 90% of men having positive results. And, in some cases, can even lead to renewed hair growth, with more than half of men noticing improvements after 3 months while under these medications.</span>
+<div class="accordion"><span itemprop="name">WHAT SUPPLEMENTS SHOULD I TAKE FOR HAIR LOSS?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Supplements may be effective if your hair loss is caused by a deficiency in a particular vitamin. There are several vitamins and minerals linked to hair health, such as biotin, selenium, zinc, and iron. However, if you are suffering from a severe vitamin deficiency which is causing symptoms as extreme as hair loss, you will likely need medical treatment and, possibly, prescription drugs like Minoxidil and Finasteride.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHO CAN BENEFIT FROM MEDICATION FOR HAIR LOSS?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Finasteride (Propecia) tends to show better results if the patient still has a large amount of fine thinning hairs. In face of extensive hair loss, finasteride may not be able to provide desired results. Younger candidates respond better to the treatment, despite being also effective in older individuals. Finasteride is not usually indicated for use in women.<br><br>
-Minoxidil (Rogaine) works best with hereditary hair loss at the vertex of the scalp in male patients or women with general thinning of hair on the top of the head. As a general rule, Minoxidil isn’t meant for a receding hairline or baldness at the front of your scalp.<br><br>
-The ideal candidate for Dutasteride (Avodart) is also a patient in the early stages of hair loss. It is not a drug recommended for women who are pregnant, breastfeeding, or with childbearing potential.</span>
+<div class="accordion"><span itemprop="name">DOES MINOXIDIL WORK FOR HAIR REGROWTH?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Minoxidil promotes hair regrowth by reversing the miniaturization of follicles and increasing blood flow around hair shafts. It can also stimulate follicle movement from resting to hair growth phase and extend each follicle’s growth phase, consequently prolonging your hair growth.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW LONG DOES MINOXIDIL TAKE TO WORK?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">During your treatment on minoxidil, it may take more than one application for at least 2 months before the evidence of hair growth can be expected. As for dosage, minoxidil 2% solution is usually applied twice a day, or up to a 5% solution for some men. This may be slightly more effective than the 2% strength, but carries a higher risk of scalp irritation. Your doctor will customize your dosage depending on your needs.</span>
+<div class="accordion"><span itemprop="name">HOW DOES FINASTERIDE WORK FOR HAIR LOSS?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Finasteride is the active ingredient of the well-known hair loss treatment Propecia. Finasteride works by blocking and combating the effects of the dihydrotestosterone hormone which is, along with genetics, responsible for pattern baldness and hair thinning.</span>
 </div></div>
 
-
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW LONG SHOULD I TAKE FINASTERIDE?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Finasteride is not a permanent cure for hair loss. If you stop taking it, your hair loss will resume. Also, any new hair that has grown will likely fall out after you have stopped taking it. Keep in mind that during treatment you'll be required to take your medication daily and for as long as you wish to combat hair loss. But, take comfort in the fact that results are usually seen as early as 3 months after you start on finasteride.</span>
+<div class="accordion"><span itemprop="name">WHAT ARE THE SIDE EFFECTS OF PROPECIA?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">There is good clinical evidence for the effectiveness of Propecia (finasteride) and although side effects are uncommon or rare, they can occur. The list includes decreased libido, erectile dysfunction, breast tenderness, and enlargement, possibly contributing to male breast cancer. As it goes with any treatment, unusual changes while on finasteride should be reported to your doctor immediately.</span>
 </div></div>
   
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
@@ -419,28 +416,28 @@ The ideal candidate for Dutasteride (Avodart) is also a patient in the early sta
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">DOES FINASTERIDE HAVE ADVERSE EFFECTS?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Although rare and uncommon, side effects can include reduced libido and a lower quantity of ejaculate, which happen in less than 5% of men. There have also been reports of erectile dysfunction among some patients. But the majority of evidence concludes that side effects associated with finasteride happen within the first six months of use and are reversible once you stop taking the medication.</span>
+<div class="accordion"><span itemprop="name">IS MINOXIDIL SAFE FOR WOMEN?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">It is important to note that Minoxidil is the only FDA-approved drug to treat female pattern baldness. And even though it is considered safe, lower doses are still recommended when treating females of all ages. In most cases, women use minoxidil 2%, while men can use the 5% formula.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">IS MINOXIDIL BETTER THAN FINASTERIDE FOR HAIR GROWTH?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Even though finasteride is more scientifically proven to treat male pattern baldness and regrow “lost” hair, there's plenty of evidence suggesting that minoxidil is effective at promoting hair growth on the entire scalp, including the hairline, while costing significantly less.</span>
+<div class="accordion"><span itemprop="name">IS FINASTERIDE BETTER THAN MINOXIDIL?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Although both medications have positive outcomes, finasteride is by far a more clinically effective medication when compared to minoxidil. But it also has more side effects and is only eligible for the crown of the head. If you have a receding hairline, finasteride may not work. Also, it shouldn't be used by women or children.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHICH IS THE RIGHT HAIR PRESCRIPTION FOR ME?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Both minoxidil and finasteride have been around for decades and both are widely used to treat hair loss. But they are distinct drugs designed for different purposes. While both prevent hair loss and encourage hair growth, minoxidil does it at the topical level while finasteride is a hormonal medicine that stops hair loss at its source. Ultimately, the best option for hair loss depends on your personal requirements.</span>
+<div class="accordion"><span itemprop="name">WHICH IS THE BETTER HAIR PRESCRIPTION FOR ME?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">There's no universal answer to the Finasteride vs Minoxidil quandary. The final decision will come down to several factors, including your current hair circumstances, expectations, age, budget, desired time frame, and more. They are, after all, different medications, designed with different goals in mind. Also, since Finasteride and Minoxidil work in different ways and target different areas, there’s no risk in taking them at the same time.</span>
 </div></div>
   
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">ARE HAIR LOSS PRESCRIPTIONS COVERED BY INSURANCE?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Some hair loss medications prescribed by your provider may be covered if you have private insurance. But in most cases, both Propecia (Finasteride) and Rogaine (Minoxidil) are typically not covered by insurance, and cost about from $40 to $70 per month, depending on which one you take.</span>
+<div class="accordion"><span itemprop="name">HOW MUCH DO MEDICATIONS FOR HAIR LOSS COST?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Prescription costs vary greatly depending on where you are and where you choose to purchase them. Usually, a 30 day supply of Propecia (Finasteride) pills costs about $70 per month. While Rogaine (Minoxidil) costs are on average about $40 for a monthly supply of topical ointment.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHERE CAN I GET AN EVALUATION AND PRESCRIPTIONS FOR HAIR LOSS IN BROOKLYN?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">At StudioMD Brooklyn we are more than happy to discuss questions or queries you may have about hair growth prescriptions or any of our treatment options. If you’re keen to treat your hair loss, our treatment plans include FUE, FUT, PRP, and LED, among others. Ultimately, only you can decide which is the right route for you and your hair. We aim to present the facts and help you make the best-informed decision.</span>
+<div class="accordion"><span itemprop="name">WHERE CAN I GET AN EVALUATION AND PRESCRIPTIONS FOR HAIR LOSS IN LONG ISLAND?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">At StudioMD Long Island your health and contentment are our number one priority. If you’re keen to tackle your hair loss, our treatment plans include several techniques and a comprehensive holistic approach. Ultimately, only you can decide which is the right route for your hair and we aim to guide you towards the best-informed decision.</span>
 </div></div>
 
 </div>
