--- a/hair-loss-supplements-prescriptions-products-white-plains.html
+++ b/hair-loss-supplements-prescriptions-products-white-plains.html
@@ -48,10 +48,10 @@ src="https://www.facebook.com/tr?id=883315832122742&ev=PageView&noscript=1"
 <!-- End Facebook Pixel Code -->
 
 <link rel="icon" href="images2020/favicon.ico" type="image/x-icon" />
-<link rel="canonical" href="https://www.thestudiomd.com/hair-loss-supplements-prescriptions-products-long-island.html" />
-<title>Hair Loss Supplements & Prescriptions |StudioMD Long Island</title>
-<meta name="Description" content="Best Hair Regrowth Center, with Supplements, Prescriptions, PRP injections, FUE Hair Transplant, LED Therapy in Long Island. Book a free consultation at StudioMD."/>
-<meta name="Keywords" content="Hair Loss, Supplement, Prescriptions, Products Hair Therapy, Growth, Regrowth, Cost, Before and After, Long Island"/>
+<link rel="canonical" href="https://www.thestudiomd.com/hair-loss-supplements-prescriptions-products-white-plains.html" />
+<title>Hair Loss Supplements & Prescriptions Greenwich | StudioMD White Plains</title>
+<meta name="Description" content="Best Hair Regrowth Center, with Supplements, Prescriptions, PRP injections, FUE Hair Transplant, LED Therapy in White Plains. Book a free consultation at StudioMD."/>
+<meta name="Keywords" content="Hair Loss, Supplement, Prescriptions, Products Hair Therapy, Growth, Regrowth, Cost, Before and After, White Plains, Greenwich, Stamford, Scarsdale,"/>
 <link href="p7lbm/p7LBM-Core.css" rel="stylesheet" type="text/css" media="all" />
 <link href="p7lbm/p7LBM-Custom-01.css" rel="stylesheet" type="text/css" media="all" />
 <link href="studiostyles2020tx.css" rel="stylesheet" type="text/css" media="all" />
@@ -391,38 +391,38 @@ els[i].classList[fnName](className);
 <h3 itemprop="name">Frequently Asked Questions</h3>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHAT SUPPLEMENTS SHOULD I TAKE FOR HAIR LOSS?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Supplements may be effective if your hair loss is caused by a deficiency in a particular vitamin. There are several vitamins and minerals linked to hair health, such as biotin, selenium, zinc, and iron. However, if you are suffering from a severe vitamin deficiency which is causing symptoms as extreme as hair loss, you will likely need medical treatment and, possibly, prescription drugs like Minoxidil and Finasteride.</span>
+<div class="accordion"><span itemprop="name">WHAT IS THE BEST MEDICATION FOR HAIR LOSS?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Both minoxidil and finasteride have been around for decades and both are widely used to treat hair loss. But they are distinct drugs designed for different purposes. While both prevent hair loss and encourage hair growth, minoxidil does it at the topical level while finasteride is a hormonal medicine that stops hair loss at its source. Ultimately, the best option for hair loss depends on your personal needs.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">DOES MINOXIDIL WORK FOR HAIR REGROWTH?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Minoxidil promotes hair regrowth by reversing the miniaturization of follicles and increasing blood flow around hair shafts. It can also stimulate follicle movement from resting to hair growth phase and extend each follicle’s growth phase, consequently prolonging your hair growth.</span>
+<div class="accordion"><span itemprop="name">HOW DOES MINOXIDIL WORK?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Minoxidil is the active ingredient in Rogaine and is mainly responsible for reinvigorating shrunken hair follicles, helping them to increase in size and regrow thicker over time. Minoxidil works by facilitating the blood flow to the hair follicles and increasing their size and hair shaft diameter, stimulating and prolonging your hair growth.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW DOES FINASTERIDE WORK FOR HAIR LOSS?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Finasteride is the active ingredient of the well-known hair loss treatment Propecia. Finasteride works by blocking and combating the effects of the dihydrotestosterone hormone which is, along with genetics, responsible for pattern baldness and hair thinning.</span>
+<div class="accordion"><span itemprop="name">WHAT CAN I EXPECT FROM FINASTERIDE TREATMENTS?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Although there is no cure for Alopecia, the right treatment can prevent further hair loss. Finasteride is very effective at stopping hair loss, with 90% of men having positive results while on it. In some cases, it can even lead to renewed hair growth, with 66% of men noticing improvements. But it is important to note that you'll need to take Propecia (finasteride) every day for a minimum of 3 months before noticing any results and that the balding process will likely resume if treatment is ended.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHAT ARE THE SIDE EFFECTS OF PROPECIA?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">There is good clinical evidence for the effectiveness of Propecia (finasteride) and although side effects are uncommon or rare, they can occur. The list includes decreased libido, erectile dysfunction, breast tenderness, and enlargement, possibly contributing to male breast cancer. As it goes with any treatment, unusual changes while on finasteride should be reported to your doctor immediately.</span>
+<div class="accordion"><span itemprop="name">CAN I REDUCE THE RISK OF FINASTERIDE SIDE EFFECTS?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">There's not much you can do about it. But you should always be encouraged to lead a healthy lifestyle, eat plenty of fruit and veg, exercise regularly and cut out bad habits, like smoking and alcohol. While you can’t directly reduce the risks of getting side effects from Finasteride entirely, it is reassuring to know that they are very rare and that being in good health is always the safer route in life.</span>
 </div></div>
   
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">CAN WOMEN TAKE MINOXIDIL?</span></div>
+<div class="accordion"><span itemprop="name">ARE MINOXIDIL LOTIONS SAFE?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">When applied strictly to the scalp minoxidil lotions are pretty safe, to the extent that it is currently available over the counter all over the US. It can sometimes cause irritation and, very occasionally, lead to an allergic reaction. But, unlike finasteride, very few adverse side effects have been reported for minoxidil.</span>
+</div></div>
+
+<div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
+<div class="accordion"><span itemprop="name">MINOXIDIL VS PROPECIA: WHICH IS BETTER FOR WOMEN?</span></div>
 <div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">It should be noted that Minoxidil is the only FDA-approved drug to treat female pattern baldness. And even though it is considered safe, lower doses are still recommended when treating females of all ages. In most cases, women use minoxidil 2%, while men can use the 5% formula.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">IS MINOXIDIL SAFE FOR WOMEN?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">It is important to note that Minoxidil is the only FDA-approved drug to treat female pattern baldness. And even though it is considered safe, lower doses are still recommended when treating females of all ages. In most cases, women use minoxidil 2%, while men can use the 5% formula.</span>
-</div></div>
-
-<div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">IS FINASTERIDE BETTER THAN MINOXIDIL?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Although both medications have positive outcomes, finasteride is by far a more clinically effective medication when compared to minoxidil. But it also has more side effects and is only eligible for the crown of the head. If you have a receding hairline, finasteride may not work. Also, it shouldn't be used by women or children.</span>
+<div class="accordion"><span itemprop="name">HOW TO KNOW WHICH PRESCRIPTION TO CHOOSE?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">It depends on each patient's current hair loss stage, overall health condition, gender, and aesthetic goals. While Propecia (finasteride) helps men with hair growth and has significant increases in hair count at 6 and 12 months, it is only good for the crown of the head and should never be used by women. While Rogaine (minoxidil) truly improves hair growth, is less expensive, and available over-the-counter, it is not very effective in larger areas and cannot be used for frontal baldness.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
@@ -431,13 +431,13 @@ els[i].classList[fnName](className);
 </div></div>
   
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">HOW MUCH DO MEDICATIONS FOR HAIR LOSS COST?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Prescription costs vary greatly depending on where you are and where you choose to purchase them. Usually, a 30 day supply of Propecia (Finasteride) pills costs about $70 per month. While Rogaine (Minoxidil) costs are on average about $40 for a monthly supply of topical ointment.</span>
+<div class="accordion"><span itemprop="name">HOW MUCH DO HAIR GROWTH PRESCRIPTIONS COST?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Prescription prices may vary from pharmacy to pharmacy and are subject to change. There is also a brand factor and while generic Propecia (Finasteride) usually costs about 25% less, generic Rogaine (Minoxidil) can reduce cost up to 50%.</span>
 </div></div>
 
 <div itemscope itemprop="mainEntity" itemtype="https://schema.org/Question">
-<div class="accordion"><span itemprop="name">WHERE CAN I GET AN EVALUATION AND PRESCRIPTIONS FOR HAIR LOSS IN LONG ISLAND?</span></div>
-<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">At StudioMD Long Island your health and contentment are our number one priority. If you’re keen to tackle your hair loss, our treatment plans include several techniques and a comprehensive holistic approach. Ultimately, only you can decide which is the right route for your hair and we aim to guide you towards the best-informed decision.</span>
+<div class="accordion"><span itemprop="name">WHERE CAN I GET AN EVALUATION AND PRESCRIPTIONS FOR HAIR LOSS WHITE PLAINS / GREENWICH / WESTCHESTER?</span></div>
+<div class="panel" itemscope itemprop="acceptedAnswer" itemtype="https://schema.org/Answer"><span itemprop="text">Tackling hair loss is a commitment, whether you choose Finasteride or Minoxidil. At StudioMD White Plains we offer state-of-the-art treatments, provided by experienced and very talented hair specialists. If you’re interested in stopping your hair loss using prescriptions, book an appointment today to learn more about your options.</span>
 </div></div>
 
 </div>
